# geospatial-embeddings-urban-morphometrics

./: .gitignore  CLAUDE.md  README.md  SPECIFICATION.md  main.ipynb  main.py  pyproject.toml
metrics/: __init__.py  _utils.py  compute.py  dimension.py  distribution.py  intensity.py  shape.py  street_connectivity.py  street_networks.py  street_relationship.py
urban_morphometrics/: main.py
urban_morphometrics/embedding/: README.md  filters.py  run_all.py  run_captum.py  run_experiment.py
urban_morphometrics/embedding/configs/: base.yaml  contextual_count_embedder.yaml  contextual_count_urban_morpho.yaml  contextual_raw_urban_morpho.yaml  count_embedder.yaml  count_urban_morpho.yaml  hex2vec.yaml  hex2vec_only_urban_morpho.yaml  hex2vec_poi_and_urban_morpho.yaml  raw_urban_morpho.yaml
urban_morphometrics/embedding/data/: dataset_factory.py  preparation.py
urban_morphometrics/embedding/embedders/: contextual_urban_morphometrics_embedder.py  embedder_factory.py  hex2vec_urban_morphometrics_embedder.py  pipeline.py
