[project]
name = "quackosm-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "quackosm (>=0.16.5,<0.17.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "h3 (>=4.4.2,<5.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "mapclassify (>=2.10.0,<3.0.0)",
    "fire (>=0.7.1,<0.8.0)",
    "momepy (>=0.11.0,<0.12.0)",
    "requests (>=2.32.5,<3.0.0)",
    "srai (>=0.10.2,<0.11.0)",
    "plotly (>=6.5.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
